products/zilliqa-isolated-server/cd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zilliqa-isolated-server
  labels:
    app.kubernetes.io/name: zilliqa-isolated-server
