products/zilliqa-isolated-server/cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zilliqa-isolated-server
  namespace: zilliqa-isolated-server
  labels:
    app.kubernetes.io/name: zilliqa-isolated-server
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zilliqa-isolated-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zilliqa-isolated-server
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: persistence-volume-ephemeral
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
        - image: zilliqa-isolated-server
          name: zilliqa-isolated-server
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /zilliqa/persistence
              name: persistence-volume-ephemeral
          ports:
            - containerPort: 5555
