products/zilliqa-isolated-server/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zilliqa-isolated-server
  namespace: zilliqa-isolated-server
  labels:
    app.kubernetes.io/name: zilliqa-isolated-server
spec:
  type: ClusterIP
  ports:
    - port: 5555
      targetPort: 5555
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: zilliqa-isolated-server
