products/zilliqa-isolated-server/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zilliqa-isolated-server
  namespace: zilliqa-isolated-server
  labels:
    app.kubernetes.io/name: zilliqa-isolated-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zilliqa-isolated-server
                port:
                  number: 5555
